# outreach

./: LICENSE
MITE/: README
MITE/Su24-diffusion/: Su24-MITE-diffusion-worksheet.odt
MITE/Su24-diffusion/random-walk-mercury/: lattice_2D.py  lattice_2D_EXERCISE.py  lattice_2D_SOLNS.py  lattice_3D.py  random-walk-2D-mercury.ipynb  random-walk-3D-mercury.ipynb
MITE/Su25-celluar-automata/game-of-life-python/: pyproject.toml
MITE/Su25-celluar-automata/game-of-life-python/rplife/: grid.py  patterns.py  views.py
MITE/Su25-celluar-automata/game-of-life-python/rplife_ex/: grid.py  patterns.py
MITE/Su25-celluar-automata/spinodal-decomposition-python/: run_spc.py  run_spnc.py  spinodal_decomp.py
MITE/test/game-of-life-python/: README.md
MITE/test/game-of-life-python/rplife_cli/: grid.py
